12/06/2019:
	- Update to OpenJPEG code to fix problem when re-using codec structures
	  more than once in the same request (for example when calculating histogram).


11/06/2019:
	- Fixes to eliminate Coverity static scan analysis warnings.
	- New rewritten OpenJPEG module: now faster, cleaner and correctly
	  handles ICC profiles, bilevel and 16 bit images. Now activated by
	  default if OpenJPEG library found and Kakadu not requested.


13/05/2019:
	- Update to configure.ac to change AC_CHECK_FILE for Kakadu sources to
	  AS_IF to properly enable cross builds. Patched thanks to Helmut Grohne.


23/02/2019:
	- Added test for resolutions that may be untiled within a tiled TIFF.


01/04/2019:
	- Added Logger class, which replaces the previous raw ofstream. The class
	  includes functionality to output log to syslog on UNIX-type systems.
	  Pass "syslog" to the LOGFILE startup environment variable to use syslog.
	- Minor code changes for Windows MSVC compilation


19/03/2019:
	- Small increase in temporary buffer size in OBJ.cc colorspace() function
	  to avoid truncation warning in GCC 8.2


13/03/2019:
	- Fixed bug in vertical mirroring transformation
	- Minor change to IIIF square parsing to allow correct logging


25/02/2019:
	- Added check for overly large XMP sizes in JPEGCompressor.cc


20/02/2019:
	- Fixed rounding error in getViewWidth() / getViewHeight() which was causing
	  certain IIIF requests to be handled by CVT rather than JTL. See:
          https://github.com/ruven/iipsrv/issues/148#issuecomment-453125005
	- Adding missing default initialization for kdu_readmode variable.


15/02/2019:
	- Changed exit code after signal handling for clean shutdown when iipsrv used
	  with systemd.


15/01/2019:
	- Added "bitonal" to list of available qualities in the IIIF info.json file and
	  replaced use of pow with a faster bitwise shift.


09/01/2019:
	- Added ability to do contrast stretching and histogram equalization via extensions