@@ -109,7 +109,9 @@ void TPTImage::loadImageInfo( int seq, int ang )
 
   // Handle various colour spaces
   if( colour == PHOTOMETRIC_CIELAB ) colourspace = CIELAB;
-  else if( colour == PHOTOMETRIC_MINISBLACK ) colourspace = GREYSCALE;
+  else if( colour == PHOTOMETRIC_MINISBLACK ){
+    colourspace = (bpc==1)? BINARY : GREYSCALE;
+  }
   else if( colour == PHOTOMETRIC_PALETTE ){
     // Watch out for colourmapped images. These are stored as 1 sample per pixel,
     // but are decoded to 3 channels by libtiff, so declare them as sRGB
@@ -292,7 +294,9 @@ RawTile TPTImage::getTile( int seq, int ang, unsigned int res, int layers, unsig
 
   // Handle various colour spaces
   if( colour == PHOTOMETRIC_CIELAB ) colourspace = CIELAB;
-  else if( colour == PHOTOMETRIC_MINISBLACK ) colourspace = GREYSCALE;
+  else if( colour == PHOTOMETRIC_MINISBLACK ){
+    colourspace = (bpc==1)? BINARY : GREYSCALE;
+  }
   else if( colour == PHOTOMETRIC_PALETTE ){
     // Watch out for colourmapped images. There are stored as 1 sample per pixel,
     // but are decoded to 3 channels by libtiff, so declare them as sRGB
